--- a/templates/plugin/build.rs.liquid
+++ b/templates/plugin/build.rs.liquid
@@ -23,11 +23,15 @@ fn main() {
     let patch: u32 = version_parts[2].parse().expect("Invalid patch version");
 
     // Determine the stage based on building whether debug or release
+    /*
+    // pipl load error occured when stage = Stage::Release in pipl == v0.1.1, so temporarily fixed to Develop
     let stage = if cfg!(debug_assertions) {
         Stage::Develop
     } else {
         Stage::Release
     };
+    */
+    let stage = Stage::Develop; 
 
     // --------------------------------------------------
     // Build the plugin with PiPL
@@ -49,7 +53,7 @@ fn main() {
             version: major,
             subversion: minor,
             bugversion: patch,
-            stage: stage,
+            stage,
             build: 1,
         },
         Property::AE_Effect_Info_Flags(0),
@@ -75,7 +79,7 @@ fn main() {
             | OutFlags2::AutomaticWideTimeInput
             | OutFlags2::SupportsSmartRender
             {%- endif %}
-            // | OutFlags2::SupportsGPURenderF32
+            // | OutFlags2::SupportsGpuRenderF32
             ,
         ),
         Property::AE_Effect_Match_Name("{{ crate_name | pascal_case }}"),
