REFACTOR: Comment out error-prone OutFlags2::SupportsGetFlattenedSequenceData

--- a/templates/plugin/build.rs.liquid
+++ b/templates/plugin/build.rs.liquid
@@ -73,7 +73,7 @@ fn main() {
             OutFlags2::FloatColorAware
             {% if with_thrededrender -%}
             | OutFlags2::SupportsThreadedRendering
-            | OutFlags2::SupportsGetFlattenedSequenceData
+            // | OutFlags2::SupportsGetFlattenedSequenceData // error occured in pipl == v0.1.1, so temporarily commented out
             {%- endif %}
             {% if with_smartrender -%}
             | OutFlags2::AutomaticWideTimeInput
